--- a/index.html
+++ b/index.html
@@ -12,12 +12,12 @@
         <main>
             <section>
                 <h2>Sobre mi</h2>
-                <p>¡Hola! mi nombre es Natalia, actualmente me encuentro cursando la carrera de diseño y comunicación visual en la Universidad nacional de Lanús</p>
+                <p>¡Hola! mi nombre es Natalia, actualmente me encuentro cursando la carrera de diseño y comunicación visual en la Universidad nacional de Lanús. Me apasiona el proceso creativo en todas sus formas, desde la tipografía hasta la ilustración y el diseño digital. Siempre estoy buscando nuevas formas de comunicar ideas de manera visualmente impactante, con una actitud constante de aprendizaje y evolución en cada proyecto que realizo.</p>
             </section>
             <section>
                 <h2>Educación</h2>
                 <p>UNLA/ Licenciatura el diseño y comunicacion visual (2020- actualidad)</p>
-                <p>Coder House/ Curso diseño ux/ui (cursando actualmente)</p>
+                <p>Curso diseño ux/ui (cursando actualmente)</p>
             </section>
             <section>
                 <h2>Dominio de herramientas</h2>
@@ -61,6 +61,7 @@
         </footer>
         <footer>
             <h6>Todos los derechos reservados</h6>
+            <h6>Copyright © 2023 Natalia</h6>
         </footer>
     </body>
 </html>
