--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
         <main>
             <section>
                 <h2>Sobre mi</h2>
-                <p>¡Hola! mi nombre es Natalia, actualmente me encuentro cursando la carrera de diseño y comunicación visual en la Universidad nacional de Lanús. Me apasiona el proceso creativo en todas sus formas, desde la tipografía hasta la ilustración y el diseño digital. Siempre estoy buscando nuevas formas de comunicar ideas de manera visualmente impactante, con una actitud constante de aprendizaje y evolución en cada proyecto que realizo.</p>
+                <p>¡Hola! mi nombre es Natalia, actualmente me encuentro cursando la carrera de diseño y comunicación visual en la Universidad nacional de Lanús. Siempre estoy buscando nuevas formas de comunicar ideas de manera visualmente impactante, con una actitud constante de aprendizaje y evolución en cada proyecto que realizo.</p>
             </section>
             <section>
                 <h2>Educación</h2>
