correcciones index.html
Excelente comienzo, hay algunas cositas para mejorar todavía

--- a/index.html
+++ b/index.html
@@ -2,13 +2,13 @@
 <html>
     <head>
         <meta charset="utf-8"/>
-        <title>tp 01</title>
+        <title>tp 01</title> <!-- el title es lo que va a aparecer en el nombre de la pestaña del navegador, acá está bueno que sea más descriptivo, por ej, imaginate que abramos varias pestañas de varios tps y este solo diga el nombre que figura, sería confuso, tu nombre iría mucho mejor. También podés utilizar espacios, maypusculas y caracteres especiales -->
     </head>
     <body>
         <header>
             <h1>/ Natalia oviedo</h1>
         </header>
-        <nav></nav>
+        <nav></nav> <!-- para la entrega final no dejes etiquetas vacías!! -->
         <main>
             <section>
                 <h2>Sobre mi</h2>
@@ -55,12 +55,12 @@
         </main>
         <footer>
             <h2>Mis Redes</h2>
-            <p>Instagram</p>x
+            <p>Instagram</p>x <!-- podés revisar la clase de etiqueta <a> para armar los links. guarda que se te escapó una x!! -->
             <p>Behance</p>
             <p>Linkedin</p>
         </footer>
-        <footer>
-            <h6>Todos los derechos reservados</h6>
+        <footer> <!-- footer es una etiqueta única y no debe repetirse, a lo sumo si querés dividir el contenido podrías poner dos <div> uno para las redes y otro para el copy -->
+            <h6>Todos los derechos reservados</h6> <!-- no utilices las h según el tamaño que te dan sino por continuidad de jerarquía, fijate que el último h que utilizaste es el h4 y por continuidad al ser más chico debería ser este un h5. no le des bola al tamaño que da el navegador porque después lo vamos a cambiar por css. también veo que no usas h3 así que habría que arreglar eso también -->
             <h6>Copyright © 2023 Natalia</h6>
         </footer>
     </body>
