--- a/index.html
+++ b/index.html
@@ -54,14 +54,16 @@
             </section>
         </main>
         <footer>
-            <h2>Mis Redes</h2>
-            <p>Instagram</p>x
-            <p>Behance</p>
-            <p>Linkedin</p>
-        </footer>
-        <footer>
-            <h6>Todos los derechos reservados</h6>
-            <h6>Copyright © 2023 Natalia</h6>
+            <section>
+                <h2>Mis Redes</h2>
+                <p>Instagram</p>x
+                <p>Behance</p>
+                <p>Linkedin</p>
+                </section>
+                <section>
+                <h6>Todos los derechos reservados</h6> 
+                <h6>Copyright © 2023 Natalia</h6>
+                </section>
         </footer>
     </body>
 </html>
