--- a/index.html
+++ b/index.html
@@ -3,11 +3,12 @@
     <head>
         <meta charset="utf-8"/>
         <title>tp 01</title>
+        <link href="style.css" rel="stylesheet" type="text/css">
     </head>
     <body>
-        <header>
+        <head>
             <h1>/ Natalia oviedo</h1>
-        </header>
+        </head>
         <nav></nav>
         <main>
             <section>
@@ -59,8 +60,8 @@
                 <p>Instagram</p>x
                 <p>Behance</p>
                 <p>Linkedin</p>
-                </section>
-                <section>
+            </section>
+            <section>
                 <h6>Todos los derechos reservados</h6> 
                 <h6>Copyright © 2023 Natalia</h6>
                 </section>
