--- a/index.html
+++ b/index.html
@@ -2,23 +2,20 @@
 <html>
     <head>
         <meta charset="utf-8"/>
-<<<<<<< HEAD
-        <title>tp 01</title>
+            <title>Natalia oviedo </title>
         <link href="style.css" rel="stylesheet" type="text/css">
-=======
-        <title>tp 01</title> <!-- el title es lo que va a aparecer en el nombre de la pestaña del navegador, acá está bueno que sea más descriptivo, por ej, imaginate que abramos varias pestañas de varios tps y este solo diga el nombre que figura, sería confuso, tu nombre iría mucho mejor. También podés utilizar espacios, maypusculas y caracteres especiales -->
->>>>>>> da00c64fa0741e74e3576e3bb0b0eb61fd28f964
-    </head>
-    <body>
-        <head>
-            <h1>/ Natalia oviedo</h1>
-<<<<<<< HEAD
         </head>
-        <nav></nav>
-=======
+        <body>
+            <header>
+                <h2>/ Natalia oviedo</h2>
+            <nav>
+                <ul>
+                    <li><a href="#sobre-mi">Sobre mí</a></li>
+                    <li><a href="#proyectos">Mas proyectos</a></li>
+                    <li><a href="#contacto">Contacto</a></li>
+                </ul>
+            </nav>
         </header>
-        <nav></nav> <!-- para la entrega final no dejes etiquetas vacías!! -->
->>>>>>> da00c64fa0741e74e3576e3bb0b0eb61fd28f964
         <main>
             <section>
                 <h2>Sobre mi</h2>
@@ -31,60 +28,50 @@
             </section>
             <section>
                 <h2>Dominio de herramientas</h2>
-                <p>Adobe ilustrator</p>
-                <p>Adobe Photoshop</p>
-                <p>Adobe indesign</p>
-                <p>Figma</p>
+                <ul>
+                    <li>Adobe ilustrator</li>
+                    <li>Adobe Photoshop</li>
+                    <li>Adobe indesign</li>
+                    <li>Figma</li>
+                </ul>
             </section>
             <section>
                 <h2> Mis proyectos</h2>
                 <h4>Afiches</h4>
-                <img src="./img/Afichesocial.jpg" alt="Afiche social" width="150px" height="200px">
-                <img src="./img/Afichecultural .jpg" alt="Afiche Culturaal" width="150px" height="200px">
+                <img src="./img/afichesocial1.jpg" alt="Afiche social" width="150px" height="200px">
+                <img src="./img/afichecultural1.jpg" alt="Afiche Culturaal" width="150px" height="200px">
             </section>   
             <section>
                 <h4>Editorial</h4>
-                <img src="./img/Editorial_1.jpg" alt="Diseño editorial / Catálogo de Artista" width="250px" height="200px">
-                <img src="./img/Infografia.jpg" alt="Diseño de información" width="200px" height="200px">
+                <img src="./img/editorial1.jpg" alt="Diseño editorial / Catálogo de Artista" width="250px" height="200px">
+                <img src="./img/infografia1.jpg" alt="Diseño de información" width="200px" height="200px">
             </section>     
             <section> 
                 <h4>Identidad visual</h4>
                 <img src="./img/identidad visual.jpg" alt="Re-diseño de identidad visual" width="150px" height="200px">
-                <img src="./img/Identidad_2.jpg" alt="Identidad Visual" width="250px" height="200px">
+                <img src="./img/identidad2.jpg" alt="Identidad Visual" width="250px" height="200px">
             </section>
             <section>
                 <h4>Fotografía</h4>
-                <img src="./img/Fotografia_1 (1).jpg" alt="Composición" width="300px" height="250px">
-                <img src="./img/Fotografia_2.jpg" alt="Composición" width="300px" height="250px">
+                <img src="./img/fotografia1.jpg" alt="Composición" width="300px" height="250px">
+                <img src="./img/fotografia2.jpg" alt="Composición" width="300px" height="250px">
             </section>
             <section>
                 <h2>Mas proyectos de diseño</h2>
-                <img src="./img/Otrosproyectos_1.jpg" alt="Proyectos" width="200px" height="150px">
-                <img src="./img/Otrosproyectos2.jpg" alt="Proyectos" width="150px" height="150px">
+                <img src="./img/otrosproyectos1.jpg" alt="Proyectos" width="200px" height="150px">
+                <img src="./img/otrosproyectos2.jpg" alt="Proyectos" width="200px" height="150px">
             </section>
         </main>
         <footer>
-<<<<<<< HEAD
-            <section>
-                <h2>Mis Redes</h2>
-                <p>Instagram</p>x
-                <p>Behance</p>
-                <p>Linkedin</p>
-            </section>
-            <section>
+            <div><h2>Mis Redes</h2>
+                <a href="https://www.instagram.com/natiioviedo22/" target="_blank">Instagram</a>
+                <a href="https://www.behance.net/nataliaoviedo3" target="_blank">Mi Behance</a>
+                <a href="https://www.linkedin.com/in/natalia-oviedo-7906b7275/" target="_blank">Linkedin</a>
+            </div>
+            <div>             
                 <h6>Todos los derechos reservados</h6> 
                 <h6>Copyright © 2023 Natalia</h6>
-                </section>
-=======
-            <h2>Mis Redes</h2>
-            <p>Instagram</p>x <!-- podés revisar la clase de etiqueta <a> para armar los links. guarda que se te escapó una x!! -->
-            <p>Behance</p>
-            <p>Linkedin</p>
-        </footer>
-        <footer> <!-- footer es una etiqueta única y no debe repetirse, a lo sumo si querés dividir el contenido podrías poner dos <div> uno para las redes y otro para el copy -->
-            <h6>Todos los derechos reservados</h6> <!-- no utilices las h según el tamaño que te dan sino por continuidad de jerarquía, fijate que el último h que utilizaste es el h4 y por continuidad al ser más chico debería ser este un h5. no le des bola al tamaño que da el navegador porque después lo vamos a cambiar por css. también veo que no usas h3 así que habría que arreglar eso también -->
-            <h6>Copyright © 2023 Natalia</h6>
->>>>>>> da00c64fa0741e74e3576e3bb0b0eb61fd28f964
+            </div>
         </footer>
     </body>
-</html>
+        </html>
