--- a/index.html
+++ b/index.html
@@ -2,17 +2,17 @@
 <html>
     <head>
         <meta charset="utf-8"/>
-            <title>Natalia oviedo </title>
+            <title>/ Natalia oviedo </title>
         <link href="style.css" rel="stylesheet" type="text/css">
         </head>
-        <body>
+        <body> 
             <header>
-                <h2>/ Natalia oviedo</h2>
+                <h1> / Natalia oviedo </h1>
             <nav>
                 <ul>
-                    <li><a href="#sobre-mi">Sobre mí</a></li>
-                    <li><a href="#proyectos">Mas proyectos</a></li>
-                    <li><a href="#contacto">Contacto</a></li>
+                    <li><a href="#sobre-mi.html" target="_blank">Sobre mí</a></li>
+                    <li><a href="#proyectos.html" target="_blank">Mas proyectos</a></li>
+                    <li><a href="#contacto.html" target="_blank">Contacto</a></li>
                 </ul>
             </nav>
         </header>
