--- a/index.html
+++ b/index.html
@@ -7,14 +7,14 @@
         </head>
         <body> 
             <header>
-                <h1> / Natalia oviedo </h1>
-            <nav>
-                <ul>
+                <h1> /  Natalia oviedo </h1>
+                    <nav class="botonera">         
+                    <ul>
                     <li><a href="#sobre-mi.html" target="_blank">Sobre mí</a></li>
                     <li><a href="#proyectos.html" target="_blank">Mas proyectos</a></li>
                     <li><a href="#contacto.html" target="_blank">Contacto</a></li>
-                </ul>
-            </nav>
+                </ul> 
+            </nav>         
         </header>
         <main>
             <section>
@@ -64,10 +64,12 @@
         </main>
         <footer>
             <div><h2>Mis Redes</h2>
-                <a href="https://www.instagram.com/natiioviedo22/" target="_blank">Instagram</a>
-                <a href="https://www.behance.net/nataliaoviedo3" target="_blank">Mi Behance</a>
-                <a href="https://www.linkedin.com/in/natalia-oviedo-7906b7275/" target="_blank">Linkedin</a>
-            </div>
+                <ul>
+                <li><a href="https://www.instagram.com/natiioviedo22/" target="_blank">Instagram</a></li>
+                <li></li><a href="https://www.behance.net/nataliaoviedo3" target="_blank">Mi Behance</a></li>
+                <li></li><a href="https://www.linkedin.com/in/natalia-oviedo-7906b7275/" target="_blank">Linkedin</a></li>
+            </ul>
+        </div>
             <div>             
                 <h6>Todos los derechos reservados</h6> 
                 <h6>Copyright © 2023 Natalia</h6>
