--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
         <link href="style.css" rel="stylesheet" type="text/css">
         </head>
         <body> 
-            <header>
+            <header div id="cabecera">
                 <h1> /  Natalia oviedo </h1>
                     <nav class="botonera">         
                     <ul>
