--- a/index.html
+++ b/index.html
@@ -1,79 +1,92 @@
 <!DOCTYPE html>
 <html>
-    <head>
-        <meta charset="utf-8"/>
-            <title>/ Natalia oviedo </title>
-        <link href="style.css" rel="stylesheet" type="text/css">
-        </head>
-        <body> 
-            <header div id="cabecera">
-                <h1> /  Natalia oviedo </h1>
-                    <nav class="botonera">         
-                    <ul>
-                    <li><a href="#sobre-mi.html" target="_blank">Sobre mí</a></li>
-                    <li><a href="#proyectos.html" target="_blank">Mas proyectos</a></li>
-                    <li><a href="#contacto.html" target="_blank">Contacto</a></li>
-                </ul> 
-            </nav>         
-        </header>
-        <main>
-            <section>
-                <h2>Sobre mi</h2>
-                <p>¡Hola! mi nombre es Natalia, actualmente me encuentro cursando la carrera de diseño y comunicación visual en la Universidad nacional de Lanús. Siempre estoy buscando nuevas formas de comunicar ideas de manera visualmente impactante, con una actitud constante de aprendizaje y evolución en cada proyecto que realizo.</p>
-            </section>
-            <section>
-                <h2>Educación</h2>
-                <p>UNLA/ Licenciatura el diseño y comunicacion visual (2020- actualidad)</p>
-                <p>Curso diseño ux/ui (cursando actualmente)</p>
-            </section>
-            <section>
-                <h2>Dominio de herramientas</h2>
-                <ul>
-                    <li>Adobe ilustrator</li>
-                    <li>Adobe Photoshop</li>
-                    <li>Adobe indesign</li>
-                    <li>Figma</li>
-                </ul>
-            </section>
-            <section>
-                <h2> Mis proyectos</h2>
-                <h4>Afiches</h4>
-                <img src="./img/afichesocial1.jpg" alt="Afiche social" width="150px" height="200px">
-                <img src="./img/afichecultural1.jpg" alt="Afiche Culturaal" width="150px" height="200px">
-            </section>   
-            <section>
-                <h4>Editorial</h4>
-                <img src="./img/editorial1.jpg" alt="Diseño editorial / Catálogo de Artista" width="250px" height="200px">
-                <img src="./img/infografia1.jpg" alt="Diseño de información" width="200px" height="200px">
-            </section>     
-            <section> 
-                <h4>Identidad visual</h4>
-                <img src="./img/identidad visual.jpg" alt="Re-diseño de identidad visual" width="150px" height="200px">
-                <img src="./img/identidad2.jpg" alt="Identidad Visual" width="250px" height="200px">
-            </section>
-            <section>
-                <h4>Fotografía</h4>
-                <img src="./img/fotografia1.jpg" alt="Composición" width="300px" height="250px">
-                <img src="./img/fotografia2.jpg" alt="Composición" width="300px" height="250px">
-            </section>
-            <section>
-                <h2>Mas proyectos de diseño</h2>
-                <img src="./img/otrosproyectos1.jpg" alt="Proyectos" width="200px" height="150px">
-                <img src="./img/otrosproyectos2.jpg" alt="Proyectos" width="200px" height="150px">
-            </section>
-        </main>
-        <footer>
-            <div><h2>Mis Redes</h2>
-                <ul>
+
+<head>
+    <meta charset="utf-8" />
+    <title>/ Natalia oviedo </title>
+    <link href="style.css" rel="stylesheet" type="text/css">
+    <link rel="icon" href="img/flor.ico" type="image/x-icon">
+</head>
+
+<body>
+    <header>
+        <h1> / Nat </h1>
+        <nav>
+            <ul >
+                <li><a href="#sobre-mi.html" target="_blank">Sobre mí</a></li>
+                <li><a href="#proyectos.html" target="_blank">Mas proyectos</a></li>
+                <li><a href="#contacto.html" target="_blank">Contacto</a></li>
+            </ul>
+        </nav>
+    </header>
+    <main>
+        <section class="fondo-contenedor">
+            <div class="contenido">
+                <h2>Natalia Oviedo
+                </h2>
+                <p>¡Hola! mi nombre es Natalia, actualmente me encuentro cursando la carrera de diseño y comunicación
+                    visual
+                    en la Universidad nacional de Lanús. Siempre estoy buscando nuevas formas de comunicar ideas de
+                    manera
+                    visualmente impactante, con una actitud constante de aprendizaje y evolución en cada proyecto que
+                    realizo.</p>
+            </div>
+        </section>
+        <section>
+            <h2>Educación</h2>
+            <p>UNLA/ Licenciatura el diseño y comunicacion visual (2020- actualidad)</p>
+            <p>Curso diseño ux/ui (cursando actualmente)</p>
+        </section>
+        <section class=>
+            <h2>Dominio de herramientas</h2>
+            <ul>
+                <li>Adobe ilustrator</li>
+                <li class=>Adobe Photoshop</li>
+                <li class=>Adobe indesign</li>
+                <li class=>Figma</li>
+            </ul>
+        </section>
+        <section>
+            <h2> Mis proyectos</h2>
+            <h4>Afiches</h4>
+            <img src="./img/afichesocial1.jpg" alt="Afiche social" width="150px" height="200px">
+            <img src="./img/afichecultural1.jpg" alt="Afiche Culturaal" width="150px" height="200px">
+        </section>
+        <section>
+            <h4>Editorial</h4>
+            <img src="./img/editorial1.jpg" alt="Diseño editorial / Catálogo de Artista" width="250px" height="200px">
+            <img src="./img/infografia1.jpg" alt="Diseño de información" width="200px" height="200px">
+        </section>
+        <section>
+            <h4>Identidad visual</h4>
+            <img src="./img/identidad visual.jpg" alt="Re-diseño de identidad visual" width="150px" height="200px">
+            <img src="./img/identidad2.jpg" alt="Identidad Visual" width="250px" height="200px">
+        </section>
+        <section>
+            <h4>Fotografía</h4>
+            <img src="./img/fotografia1.jpg" alt="Composición" width="300px" height="250px">
+            <img src="./img/fotografia2.jpg" alt="Composición" width="300px" height="250px">
+        </section>
+        <section>
+            <h2>Mas proyectos de diseño</h2>
+            <img src="./img/otrosproyectos1.jpg" alt="Proyectos" width="200px" height="150px">
+            <img src="./img/otrosproyectos2.jpg" alt="Proyectos" width="200px" height="150px">
+        </section>
+    </main>
+    <footer>
+        <div>
+            <h2>Mis Redes</h2>
+            <ul>
                 <li><a href="https://www.instagram.com/natiioviedo22/" target="_blank">Instagram</a></li>
-                <li></li><a href="https://www.behance.net/nataliaoviedo3" target="_blank">Mi Behance</a></li>
-                <li></li><a href="https://www.linkedin.com/in/natalia-oviedo-7906b7275/" target="_blank">Linkedin</a></li>
+                <li><a href="https://www.behance.net/nataliaoviedo3" target="_blank">Mi Behance</a></li>
+                <li><a href="https://www.linkedin.com/in/natalia-oviedo-7906b7275/" target="_blank">Linkedin</a></li>
             </ul>
         </div>
-            <div>             
-                <h6>Todos los derechos reservados</h6> 
-                <h6>Copyright © 2023 Natalia</h6>
-            </div>
-        </footer>
-    </body>
-        </html>
+        <div class="flex-item b">
+            <h6>Todos los derechos reservados</h6>
+            <h6>Copyright © 2023 Natalia</h6>
+        </div>
+    </footer>
+</body>
+
+</html>
