--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
     </header>
     <main>
         <section class="inicio">
-            <img class="baner" src="./img/fondo.jpg">
+            <img class="baner" src="./img/banner.jpg">
             <div class="mi-nombre">
                 <img class="flor-img" src="./img/png/flor2.png" alt="flor">
                 <p>Natalia Oviedo</p>
@@ -59,47 +59,61 @@
             <div class="image">
                 <div class="proyectos-img">
                     <h4>Afiches</h4>
-                    <img src="./img/afichesocial1.jpg" alt="Afiche social" width="150px" height="200px">
-                    <img src="./img/afichecultural1.jpg" alt="Afiche Culturaal" width="150px" height="200px">
+                    <a href="https://www.behance.net/gallery/155726021/Afiche-social-Diseno-II" target="_blank">
+                        <img src="./img/afichesocial1.jpg" alt="Afiche social" width="250px" height="300px">
+                    </a>
+                    <a href="https://www.behance.net/gallery/157761159/Afiches-cultural-Iris-Van-Herpen-Diseno-II"
+                        target="_blank">
+                        <img src="./img/afichecultural1.jpg" alt="Afiche Culturaal" width="250px" height="300px">
+                    </a>
                 </div>
                 <div class="proyectos-img">
                     <h4>Editorial</h4>
-                    <img src="./img/editorial1.jpg" alt="Diseño editorial / Catálogo de Artista" width="250px"
-                        height="200px">
-                    <img src="./img/infografia1.jpg" alt="Diseño de información" width="200px" height="200px">
+                    <a href="https://www.behance.net/gallery/184190355/Diseno-editorial-Catalogo-de-artista"
+                        target="_blank">
+                        <img src="./img/editorial1.jpg" alt="editorial Catálogo de Artista" width="350px" height="300px">
+                    </a>
+                    <a href="https://www.behance.net/gallery/184314865/Infografia-Mate-elctrico" target="_blank">
+                        <img src="./img/infografia1.jpg" alt="Diseño de información" width="300px" height="300px">
+                    </a>
                 </div>
                 <div class="proyectos-img">
                     <h4>Identidad visual</h4>
-                    <img src="./img/identidad visual.jpg" alt="Re-diseño de identidad visual" width="150px"
-                        height="200px">
-                    <img src="./img/identidad2.jpg" alt="Identidad Visual" width="250px" height="200px">
+                    <a href="https://www.behance.net/gallery/182412071/Rediseno-de-marca-Taller-de-diseno-III-UNLa"
+                        target="_blank">
+                        <img src="./img/identidad visual.jpg" alt="Re-diseño de identidad visual" width="300px" height="250px">
+                    </a>
+                    <a href="https://www.behance.net/gallery/191837071/Sistema-y-Diseno-de-latas" target="_blank">
+                        <img src="./img/identidad2.jpg" alt="Identidad Visual" width="400x" height="400px">
+                    </a>
                 </div>
                 <div class="proyectos-img">
                     <h4>Fotografía</h4>
-                    <img src="./img/fotografia1.jpg" alt="Composición" width="300px" height="250px">
-                    <img src="./img/fotografia2.jpg" alt="Composición" width="300px" height="250px">
+                    <a href="https://www.behance.net/gallery/153431609/Composicion-fotografica-en-sistema-UNLA"
+                        target="_blank">
+                        <img src="./img/fotografia1.jpg" alt="Composición" width="300px" height="250px">
+                        <img src="./img/fotografia2.jpg" alt="Composición" width="300px" height="250px">
+                    </a>
                 </div>
             </div>
-        </section>
-        <section class="otros-ejemplos ">
-            <h2>Mas proyectos de diseño</h2>
-            <img src="./img/otrosproyectos1.jpg" alt="Proyectos" width="200px" height="150px">
-            <img src="./img/otrosproyectos2.jpg" alt="Proyectos" width="200px" height="150px">
         </section>
     </main>
     <footer>
         <section id="contacto">
-            <h2>Mis Redes</h2>
-            <ul>
-                <li><a href="https://www.instagram.com/natiioviedo22/" target="_blank">Instagram</a></li>
-                <li><a href="https://www.behance.net/nataliaoviedo3" target="_blank">Mi Behance</a></li>
-                <li><a href="https://www.linkedin.com/in/natalia-oviedo-7906b7275/" target="_blank">Linkedin</a></li>
-            </ul>
+            <div class="redes-1 ">
+                <h2>Mis Redes</h2>
+                <ul class="botones-redes">
+                    <li><a href="https://www.instagram.com/natiioviedo22/" target="_blank">Instagram</a></li>
+                    <li><a href="https://www.behance.net/nataliaoviedo3" target="_blank">Mi Behance</a></li>
+                    <li><a href="https://www.linkedin.com/in/natalia-oviedo-7906b7275/" target="_blank">Linkedin</a>
+                    </li>
+                </ul>
+            </div>
+            <div class="copy">
+                <h6>Todos los derechos reservados</h6>
+                <h6>Copyright © 2023 Natalia</h6>
+            </div>
         </section>
-        <div class="copy">
-            <h6>Todos los derechos reservados</h6>
-            <h6>Copyright © 2023 Natalia</h6>
-        </div>
     </footer>
 </body>
 
