correcciones index.html

--- a/index.html
+++ b/index.html
@@ -21,14 +21,14 @@
     </header>
     <main>
         <section class="inicio">
-            <img class="baner" src="./img/banner.jpg">
+            <img class="baner" src="./img/banner.jpg"> <!-- como una cuestión estética, queda mejor sacarle las líneas blancas de la imagen-->
             <div class="mi-nombre">
                 <img class="flor-img" src="./img/png/flor2.png" alt="flor">
                 <p>Natalia Oviedo</p>
             </div>
         </section>
         <section id="sobre-mi">
-            <div class="presentacion">
+            <div class="presentacion"> <!-- este div debería ser otra etiqueta -->
                 <h2>Sobre mi</h2>
                 <p>¡Hola! Soy Natalia, actualmente me encuentro cursando la carrera de diseño y comunicación visual,
                     empezando mi cuarto año de carreran en la Universidad Nacional de Lanús. Esta es mi primera página
@@ -99,7 +99,7 @@
         </section>
     </main>
     <footer>
-        <section id="contacto">
+        <section id="contacto"> <!-- tanto en header como en footer no van sections -->
             <div class="redes-1 ">
                 <h2>Mis Redes</h2>
                 <ul class="botones-redes">
